<resources>
    <string name="app_name">Postaq</string>
    <string name="text_app_logo">Postaq</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale_contact">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_camera">"Camera permission is needed for continuing your action."</string>
    <string name="permission_rationale_storage">"Write storage permission is needed for continuing your action."
    </string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_sign_up">Don\'t have an account? Sign up</string>
    <string name="action_verify_sign_up">Sign Me Up</string>
    <string name="font_path_actonia">fonts/Actonia.ttf</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_emp_id">Employee ID</string>
    <string name="hint_branch_code">Branch ID</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="empty_string" />
    <string name="text_app_logo_desc">Post a Question</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_ok">OK</string>
    <string name="reset_yout_password">Reset Your Password</string>
    <string name="reset_yout_password_info">Please enter your registered Email Address.</string>
    <string name="err_msg_not_valid_email">Invalid email address</string>
    <string name="err_msg_password_six_char">Password should be at least 6 characters</string>
    <string name="err_no_network_connection">Please check your network connection</string>
    <string name="err_msg_title_general">Something went wrong</string>
    <string name="err_msg_subtitle_general">An error has occured. Please try again</string>
    <string name="err_dialog_fragment_tag">error_dialog_fragment</string>
    <string name="err_signup_dialog">error_dialog_signup</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_verify_account_dialog">action_verify_account_dialog</string>
    <string name="text_title_verify_account">Congratulation, Sign Up Successful</string>
    <string name="hint_activation_code">ENTER CODE</string>
    <string name="text_subtitle_verify_account">Please input the activation code we send to your email address.</string>
    <string name="txt_title_signing_up">Signing Up</string>
    <string name="txt_dialog_please_wait">Please wait...</string>
    <string name="action_edit_email">Edit Email</string>
    <string name="action_send_verification_code">Send Again</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="msg_sent_verification_to_email">We\'ve just sent a code to</string>
    <string name="txt_title_sending_code">Sending Code</string>
    <string name="txt_title_signing_in">Signing in</string>
    <string name="msg_back_btn_exit">Press back again to leave</string>
    <string name="txt_title_sending_email">Sending Email</string>
    <string name="text_send_forgot_password_email">We\'ve sent you an email to</string>
    <string name="text_send_forgot_password_email2">that will help you creating a new password.</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Log Out</string>
    <string name="msg_dialog_logout">Are you sure you want to log out?</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="text_info_short">Info</string>
    <string name="setting_notification_alert">Alert</string>
    <string name="action_notification_settings">Notification Settings</string>
    <string name="setting_notification_led">LED</string>
    <string name="setting_vibrate_title">Vibrate</string>
    <string name="setting_sound_title">Sound</string>
    <string name="dialog_title_input_name">Enter Your Name</string>
    <string name="dialog_title_input_name_hint">Your Name</string>
    <string name="text">Text</string>
    <string name="dialog_title_input_phone_hint">Phone Number</string>
    <string name="dialog_title_input_empid_hint">Employee ID</string>
    <string name="dialog_title_input_branchid_hint">Branch ID</string>
    <string name="dialog_title_input_phone">Enter Your Phone Number</string>
    <string name="dialog_title_input_empid">Enter Your Employee ID</string>
    <string name="dialog_title_input_branchid">Enter Your Branch ID</string>
    <string name="number">Number</string>
    <string name="phone">Phone</string>
    <string name="action_profile_settings"><![CDATA[Profile & Settings]]></string>
    <string name="txt_title_upload_image">Uploading Image</string>
    <string name="dialog_title_select_image_from">Select Picture From</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="dialog_title_confirm">Confirm</string>
    <string name="msg_save_changed_value_confirmation">Are you sure want to save the changes?</string>
    <string name="action_yes">Yes</string>
    <string name="dialog_title_select_picture">Select Picture</string>
    <string name="msg_device_no_camera">Your device has no camera</string>
    <string name="dialog_title_error_upload_profile_picture">Image Upload Failed</string>
    <string name="dialog_msg_error_upload_profile_picture">Failed to update profile picture, please try again.</string>
    <string name="text_msg_change_avatar_success">Your profile picture has been updated</string>
    <string name="text_msg_upload_post_success">Your question has been posted</string>
    <string name="txt_title_save_changes">Saving changes</string>
    <string name="dialog_title_error_save_user_profile">Save Failed</string>
    <string name="dialog_msg_error_save_user_profile">Failed to save user profile</string>
    <string name="err_user_name_length">Name should not be more than 40 characters</string>
    <string name="err_user_phone_length">Phone Number should be between 6 to 15 characters</string>
    <string name="err_user_empid_length">Employee ID should not be more than 8 characters</string>
    <string name="err_user_branchid_length">Branch ID should not be more than 4 characters</string>
    <string name="error_field_cannot_zero">This field cannot be zero</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text_answer">Answer</string>
    <string name="action_delete_question">Delete Question</string>
    <string name="action_edit_question">Edit Question</string>
    <string name="largeText">Asswrwb. Met pagi Rini, mhn dilaksanakan hals sbb ya :Assww Selamat Pagi Bapak Ibu ybh, mohon perkenannya membantu u mengukur dg stopwatch Hp, brapa detik kah response time
                1. Buka blokir bripens
                2. Tarik setor di teller
                3. Interface brinet Las
                Plz mohon dilakukan oleh kanwil binaan, sebaiknya minimal 150 unit kerja( cab, kcp, unit dsb)Diharap posisi tgl 25 okt sd 5 nov 16.  Tq somuch .. Wassww
                Thank you ya.Wass</string>
</resources>