<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    tools:context="app.rbzeta.postaq.activity.ForgotPasswordActivity">


    <LinearLayout
        android:id="@+id/frameForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/frame_white"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textTitleForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/reset_yout_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textSubTitleForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/reset_yout_password_info" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editEmailForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_gray"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/hint__material_light"
                android:textSize="@dimen/edit_text_size" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancelForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_border_left"
                android:text="@string/action_login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDarker" />

            <Button
                android:id="@+id/buttonNextForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_border_right"
                android:text="@string/action_next"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDarker" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
