
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="app.rbzeta.postaq.app.rbzeta.jakers.activity.LoginActivity">

            <!-- Login progress -->

            <TextView
                android:id="@+id/textAppLogo"
                android:text="@string/text_app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="56sp"
                android:layout_gravity="bottom|center_horizontal" />

            <TextView
                android:id="@+id/textAppLogoDesc"
                android:text="@string/text_app_logo_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="12sp"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/lightGrey"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/editEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="18sp"
                        android:textColorLink="@color/white"
                        android:backgroundTint="@color/white"
                        tools:targetApi="lollipop" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/lightGrey"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/editPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/editPasswordLoginIme"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="18sp"
                        android:textColorLink="@color/white"
                        android:backgroundTint="@color/white"
                        tools:targetApi="lollipop" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_log_in"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/lightGrey"
                    android:layout_marginBottom="20dp"
                    android:layout_height="35dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/linkForgotPassword"
                android:text="@string/action_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical|center_horizontal" />

            <Button
                android:id="@+id/signup_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_sign_up"
                android:background="@drawable/button_transparent_border_radius"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_height="35dp" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>