<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    tools:context="app.rbzeta.postaq.activity.VerifyCodeActivity">


    <LinearLayout
        android:id="@+id/frameVerifyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/frame_white"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textTitleVerifyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/check_your_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textSubTitleVerifyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/msg_sent_verification_to_email" />

        <TextView
            android:id="@+id/textEmailVerifyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorPrimaryDarker"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/editCodeVerifyAccount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_gray"
                android:hint="@string/hint_activation_code"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/hint__material_light"
                android:textSize="18sp"
                android:textAlignment="center"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEditVerifyAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_border_left"
                android:text="@string/action_edit_email"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDarker" />

            <Button
                android:id="@+id/buttonSendVerifyAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_border_right"
                android:text="@string/action_send_verification_code"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDarker" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
