<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameVerivyDialogFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textTitleVerivyDialogFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/empty_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textSubTitleVerivyDialogFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/empty_string"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/textVerivyCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_gray"
            android:hint="@string/hint_activation_code"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/hint__material_light"
            android:textSize="@dimen/edit_text_size" />
    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/ok_fragment_verivy_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_transparent"
            android:text="@string/action_ok"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDarker" />

    </LinearLayout>